<resources>
    <string name="app_name">Books Application</string>
    <string name="welcome">Welcome!</string>

    <string name="login_header">Please, Log In</string>
    <string name="signup_header">Please, Sign Up</string>
    <string name="photos_header">Photos</string>
    <string name="videos_header">Videos</string>

    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="save_button">Save</string>
    <string name="images_button">Images</string>
    <string name="videos_button">Videos</string>
    <string name="choose_button">Choose</string>
    <string name="load_button">Load</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="author_label">Author</string>
    <string name="username_label">Username</string>

    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="title_label">Title</string>
    <string name="year_label">Year</string>
    <string name="pages_label">Pages</string>
    <string name="description_label">Description</string>
    <string name="map_label">Map (click label to lock)</string>

    <string name="dont_have_account">I don\'t have an account</string>
    <string name="already_have_account">I already have an account</string>
    <string name="load_image">Load Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="show_images">Show Images</string>

    <string name="book_title">Book Title</string>
    <string name="an_image_for_the_item">an image for the item</string>
    <string name="default_title">Default Title</string>
    <string name="defaultusername">Default Username</string>
    <string name="default_year">2001</string>
    <string name="default_pages">124 pages</string>
    <string name="settings_header">Settings</string>
    <string name="log_out_button">Log Out</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="language">Language</string>
    <string name="username">Username</string>

</resources>